fix horizontal scroll in calendar

--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -33,12 +33,12 @@
   min-height: 879px;
   overflow-x: scroll;
   overflow-y: hidden;
-  padding-bottom: 17px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0 20px 17px 20px;
 
   @include respond-to("desktopBig") {
     max-width: 1140px;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   .contentContainer {
